# Mimobot-AI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ai_client.py  bot.py  config.example.env  config.py  database.py  docker-compose.yml  docker-entrypoint.sh  handlers.py  mimo_bot.db  prompt.md  providers.py  pyproject.toml  requirements.txt  utils.py
.opencode/agents/: code-reviewer.md
docs/: README.md  setup.md
src/: __init__.py
src/kevlarbot/: __init__.py  ai_client.py  config.py  database.py  handlers.py  providers.py  utils.py
src/kevlarbot/handlers/: __init__.py  admin.py  base.py  chat.py  help.py  models.py  settings.py
src/mimobot/: __init__.py  ai_client.py  config.py  database.py  handlers.py  utils.py
